--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
   font-family: "Arimo", sans-serif;
   font-family: "Bricolage Grotesque", sans-serif;
-  background-color: #f7f4ea;
-  color: #574b9b;
+  background-color: #f2dcdb;
+  color: #fdeada;
 }
 
 .app-wrapper {
