--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: "Arimo", sans-serif;
   font-family: "Bricolage Grotesque", sans-serif;
   background-color: #f2dcdb;
-  color: #f2dcdb;
+  color:#002050;
 }
 
 .app-wrapper {
