--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Arimo", sans-serif;
   font-family: "Bricolage Grotesque", sans-serif;
-  background-color: #f2dcdb;
+  background-color: #002050;
   color:#002050;
 }
 
